--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Libertinus+Mono&display=swap");
 
 body {
   font-family: "Oswald", sans-serif;
-  background-color: #abc5cb;
+  background-color: rgb(176, 169, 169);
 }
 
 .navbar {
@@ -26,9 +27,8 @@ body {
 .video-bg {
   position: fixed;
   top: 0;
-  left: 0;
-  min-width: 100%;
-  max-height: 100%;
+  max-width: 100%;
+  min-height: 100%;
   object-fit: cover;
   z-index: -1;
 }
@@ -53,12 +53,12 @@ body {
   content: "";
   background: linear-gradient(
     100deg,
-    #04090a,
-    #0f1330,
-    #322d6c,
-    #2a2758,
-    #002bff,
-    #6e0139
+    #6c9faa,
+    #6a72ab,
+    #9c99b3,
+    #509fb1,
+    #c789c3,
+    #6f5266
   );
 
   position: absolute;
@@ -92,7 +92,6 @@ body {
   outline: none;
   position: relative;
   z-index: 0;
-  font-family: "Oswald", sans-serif;
 }
 
 .esplora-btn::after {
@@ -104,12 +103,12 @@ body {
   content: "";
   background: linear-gradient(
     100deg,
-    #04090a,
-    #0f1330,
-    #322d6c,
-    #2a2758,
-    #002bff,
-    #6e0139
+    #6c9faa,
+    #6a72ab,
+    #9c99b3,
+    #509fb1,
+    #c789c3,
+    #6f5266
   );
   position: absolute;
   top: -2px;
@@ -133,11 +132,7 @@ body {
   color: rgb(255, 255, 255);
   text-align: center;
   text-shadow: 12px 15px 10px rgb(4, 4, 5);
-  font-family: "Oswald", sans-serif;
-}
 
-.hero-title {
-  font-size: 3rem;
   font-weight: 500;
 }
 
@@ -153,17 +148,12 @@ body {
   left: 0;
   width: 200px;
   height: 100%;
-  background-color: #668e93;
 }
 
 .sidebar-custom a {
   color: white;
   text-decoration: none;
   display: block;
-}
-
-.sidebar-custom a:hover {
-  text-decoration: underline;
 }
 
 .navbar-top-custom {
@@ -173,11 +163,12 @@ body {
   width: calc(100% - 200px);
   background-image: linear-gradient(180deg, oklab(6.72% 0 -0.00001), #6c6c6c00);
   height: 120px;
+  z-index: 999;
 }
 
 .content-wrapper {
   margin-top: 160px;
-  margin-left: 300px;
+  margin-left: 200px;
 }
 
 @media (max-width: 991px) {
@@ -196,9 +187,245 @@ body {
 }
 
 i {
-  transition: transform 0.3s ease-in-out;
+  transition: transform 0.2s ease-in-out;
 }
 
 i:hover {
-  transform: scale(1.3);
+  transform: scale(1.2);
+}
+
+.sidebar-custom {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 200px;
+  height: 100%;
+  background-color: #668e93;
+  z-index: 1000;
+}
+
+.navbar-top-custom {
+  position: fixed;
+  top: 0;
+  left: 200px;
+  height: 120px;
+  width: calc(100% - 200px);
+  background-image: linear-gradient(
+    180deg,
+    oklab(41.548% -0.01699 -0.00508),
+    #6c6c6c00
+  );
+  z-index: 999;
+}
+
+.content-wrapper {
+  margin-top: 140px;
+  padding: 20px;
+  margin-left: 200px;
+}
+
+@media (max-width: 991px) {
+  .sidebar-custom {
+    display: none;
+  }
+
+  .navbar-top-custom {
+    left: 0;
+    width: 100%;
+  }
+
+  .content-wrapper {
+    margin-left: auto;
+  }
+}
+
+.custom-card {
+  max-width: 280px;
+  transition: transform 0.4s ease-in-out;
+  position: relative;
+  display: flex;
+}
+
+@property --angle {
+  syntax: "<angle>";
+  initial-value: 0deg;
+  inherits: false;
+}
+
+.custom-card::after,
+.custom-card::before {
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-image: conic-gradient(
+    from var(--angle),
+    transparent 3%,
+    #6c9faa,
+    #6a72ab,
+    #9c99b3,
+    #00d0ff,
+    #c789c3,
+    #272225
+  );
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
+  z-index: -1;
+  padding: 8px;
+  border-radius: 10px;
+  animation: 4s spin linear infinite;
+}
+
+.custom-card::before {
+  filter: blur(1.5rem);
+  opacity: 1;
+}
+
+@keyframes spin {
+  from {
+    --angle: 0deg;
+  }
+  to {
+    --angle: 360deg;
+  }
+}
+
+.custom-card:hover {
+  transform: scale(1.2);
+}
+
+.card-img-top {
+  height: 180px;
+  object-fit: cover;
+}
+
+.card-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: white;
+}
+
+.forum-img {
+  width: 100%;
+  height: auto;
+  max-height: 390px;
+  object-fit: cover;
+  display: block;
+}
+
+@media (max-width: 991px) {
+  .forum-img {
+    margin-left: 0;
+    margin-right: auto;
+    width: 100%;
+  }
+}
+
+.footer-obliquo {
+  clip-path: polygon(0 35%, 95% 0, 100% 100%, 0% 100%);
+  padding-top: 180px;
+  padding-bottom: 10px;
+  margin-top: 60px;
+  background-image: linear-gradient(180deg, rgb(87, 136, 156), rgb(44, 40, 71));
+}
+
+.footer-email {
+  font-size: 2.2rem;
+  text-transform: uppercase;
+  letter-spacing: 7px;
+  text-align: center;
+}
+
+.img-fluid {
+  height: auto;
+  max-height: 430px;
+  width: auto;
+  max-width: 620px;
+  transition: transform 0.5s ease-in-out;
+  content: "";
+
+  background-image: conic-gradient(
+    from var(--angle),
+    transparent 3%,
+    rgb(11, 207, 251),
+    white,
+    rgb(146, 229, 190)
+  );
+  padding: 7px;
+  animation: 4s spin linear infinite;
+}
+
+.img-fluid:hover {
+  transform: scale(1.1);
+}
+
+.descrizione-estesa {
+  font-size: 1.1rem;
+  line-height: 2.5;
+}
+
+.esperienza-titolo {
+  font-family: "Libertinus Mono", monospace;
+  letter-spacing: 5px;
+}
+
+.img-recensioni {
+  width: 25px;
+  height: 25px;
+}
+.input-container {
+  position: relative;
+  max-width: 600px;
+  margin: 7px auto;
+}
+
+.input-container input {
+  width: 100%;
+  padding: 10px;
+  font-size: 18px;
+  border: 1.3px solid rgb(246, 241, 241);
+
+  background-color: transparent;
+  color: white;
+  outline: none;
+}
+
+.input-container label {
+  position: absolute;
+  top: 50%;
+  left: 40px;
+  color: white;
+  pointer-events: none;
+  transform: translateY(-50%);
+  transition: 0.2s ease all;
+}
+
+.input-container input:focus + label,
+.input-container input:valid + label {
+  top: 0px;
+  font-size: 12px;
+  font-size: large;
+  color: white;
+  background-color: rgb(176, 169, 169);
+}
+
+.Card-img {
+  max-height: 320px;
+  overflow: hidden;
+  border-radius: 1rem;
+}
+
+.Card-img {
+  object-fit: cover;
+  height: 100%;
+  opacity: 0.5;
+}
+
+.forum-title,
+h2 {
+  letter-spacing: 13px;
+  font-family: "Libertinus Mono", monospace;
+  word-spacing: 13px;
 }
