--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Libertinus+Mono&display=swap");
 
-body {
+html,
+body,
+#root {
+  height: 100%;
+  margin: 0;
   font-family: "Oswald", sans-serif;
   background-color: rgb(176, 169, 169);
 }
@@ -428,4 +432,17 @@ h2 {
   letter-spacing: 13px;
   font-family: "Libertinus Mono", monospace;
   word-spacing: 13px;
+}
+
+.center-words {
+  letter-spacing: 5px;
+  font-family: "Libertinus Mono", monospace;
+}
+
+.card-pay {
+  background-image: linear-gradient(
+    180deg,
+    rgb(159, 159, 184),
+    rgb(44, 75, 85)
+  );
 }
